<resources>
    <string name="app_name">Araltime</string>
    <string name="onboarding_image">Onboarding image</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="welcome_to_araltime">Welcome to AralTime</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="home">Home</string>
    <string name="subjects">Subjects</string>
    <string name="history">History</string>
    <string name="goals">Goals</string>
    <string name="reminders">Reminders</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="start_session">Start Session</string>
    <string name="pause">Pause</string>
    <string name="end">End</string>
    <string name="subject">Subject</string>
    <string name="activity">Activity</string>
    <string name="topic">Topic</string>
    <string name="mood">Mood</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="points">Points</string>
    <string name="premium">Premium</string>
    <string name="study_time">Study Time</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="goals_preview">Goals Preview</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="create_account">Create Account</string>
    <string name="welcome">Welcome</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="log_session">Log Session</string>
    <string name="update">Update</string>
    <string name="achieve">Achieve</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="logout">Logout</string>
</resources>